# SporzOBC

./: .gitignore  CMakeLists.txt  README.md  amettredansdoxygen  conanfile.txt
SporzOBC-WAL/: CMakeLists.txt  notes.md
SporzOBC-WAL/android/: AndroidManifest.xml
SporzOBC-WAL/android/src/org/sporz/example/Vibration/: VibrationClient.java
SporzOBC-WAL/code/include/CoreApp/: CoreApp.hpp
SporzOBC-WAL/code/include/CoreApp/GameLogicManager/: GameHistoryManager.hpp  GameLogicManager.hpp  Player.hpp  Role.hpp
SporzOBC-WAL/code/include/CoreApp/GameLogicManager/Player/: Player.hpp
SporzOBC-WAL/code/include/CoreApp/GameLogicManager/Role/: Role.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/: IGraphicalHandler.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/GraphicalHandler/: GraphicalHandler.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/IUiView/: IUiView.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/IUiView/UiView/: ElectChief.hpp  GameInformation.hpp  MainMenu.hpp  PlayerSelect.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/IUiView/UiView/CalculatorForm/: Calculator.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/IUiView/UiView/Phases/Day/: Discuss.hpp  Elimination.hpp  EveningBedTime.hpp  MorningWakingUp.hpp  VotingPhaseEnd.hpp  VotingPhaseResult.hpp  VotingPhaseTarget.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/IUiView/UiView/UiViewFactory/: RegisteredInFactory.hpp  UiViewFactory.hpp  UiViews.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/Widgets/: PlayerCountSpinBox.hpp  PlayerNameList.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/Widgets/GameTable/: GameInformationModel.hpp  GameTable.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/Widgets/GameUiModel/: GameUiModel.hpp  GameUiWidget.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/Widgets/HelperText/: HelperText.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/Widgets/MyModel/: MyModel.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/Widgets/MyTableWidget/: MyTableWidget.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/Widgets/QuoteBox/: ArrowQuote.hpp  LineQuote.hpp  QuoteText.hpp  ReversedArrowQuote.hpp  ReversedLineQuote.hpp
SporzOBC-WAL/code/include/CoreApp/IGraphicalHandler/Widgets/TurnImg/: ComputerScientistTurnImg.hpp  DoctorTurnImg.hpp  GeneticistTurnImg.hpp  HackerTurnImg.hpp  MutantTurnImg.hpp  NoviceHackerTurnImg.hpp  PainterTurnImg.hpp  PsychologistTurnImg.hpp  SpyTurnImg.hpp
SporzOBC-WAL/code/include/SporzException/: SporzException.hpp
SporzOBC-WAL/code/resources/: assets.qrc  calculatorform.ui  elect_chief.ui  game_information.ui  main_menu.ui  player_select.ui  stylesheet.qss
SporzOBC-WAL/code/resources/Phases/Day/: discuss.ui  elimination.ui  evening_bed_time.ui  morning_waking_up.ui  voting_phase_end.ui  voting_phase_result.ui  voting_phase_target.ui
SporzOBC-WAL/code/resources/Phases/Night/: evening_bed_time.ui
SporzOBC-WAL/code/resources/Phases/Night/ComputerScientist/: result.ui  turn.ui
SporzOBC-WAL/code/resources/Phases/Night/Doctor/: kill_or_heal_choice.ui  kill_or_heal_target.ui  recap.ui  turn.ui
SporzOBC-WAL/code/resources/Phases/Night/Geneticist/: result.ui  target.ui  turn.ui
SporzOBC-WAL/code/resources/Phases/Night/Hacker/: result.ui  target.ui  turn.ui
SporzOBC-WAL/code/resources/Phases/Night/Mutant/: kill_or_mutate_choice.ui  kill_or_mutate_target.ui  paralysis_target.ui  recap.ui  turn.ui
SporzOBC-WAL/code/resources/Phases/Night/NoviceHacker/: result.ui  target.ui  turn.ui
SporzOBC-WAL/code/resources/Phases/Night/Painter/: result.ui  target.ui  turn.ui
SporzOBC-WAL/code/resources/Phases/Night/Psychologist/: result.ui  target.ui  turn.ui
SporzOBC-WAL/code/resources/Phases/Night/Spy/: result.ui  target.ui  turn.ui
SporzOBC-WAL/code/src/: main.cpp
SporzOBC-WAL/code/src/CoreApp/: CoreApp.cpp
SporzOBC-WAL/code/src/CoreApp/GameLogicManager/: GameHistoryManager.cpp  GameLogicManager.cpp
SporzOBC-WAL/code/src/CoreApp/GameLogicManager/Player/: Player.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/: GraphicalHandler.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/UiView/: ElectChief.cpp  GameInformation.cpp  MainMenu.cpp  PlayerSelect.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/UiView/CalculatorForm/: Calculator.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/UiView/IUiGameView/: IUiGameView.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/UiView/Phases/Day/: Discuss.cpp  Elimination.cpp  EveningBedTime.cpp  MorningWakingUp.cpp  VotingPhaseEnd.cpp  VotingPhaseResult.cpp  VotingPhaseTarget.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/UiView/Phases/Night/ComputerScientist/: ComputerScientistResult.cpp  ComputerScientistTurn.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/UiView/UiViewFactory/: UiViewFactory.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/Widgets/: PlayerCountSpinBox.cpp  PlayerNameList.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/Widgets/GameTable/: GameInformationModel.cpp  GameTable.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/Widgets/GameUiModel/: GameUiModel.cpp  GameUiWidget.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/Widgets/MyModel/: MyModel.cpp
SporzOBC-WAL/code/src/CoreApp/GraphicalHandler/Widgets/MyTableWidget/: MyTableWidget.cpp
SporzOBC-WAL/code/src/MyModel/: MyModel.cpp
SporzOBC-WAL/conan/: CMakeLists.txt  conanfile.txt
SporzOBC-WAL/conan/src/: main.cpp
SporzOBC-WAL/include/: homepage.h
SporzOBC-WAL/include/CalculatorForm/: Calculator.hpp  CalculatorForm.hpp
SporzOBC-WAL/include/MyModel/: MyModel.hpp
SporzOBC-WAL/include/MyTableWidget/: MyTableWidget.hpp
SporzOBC-WAL/resources/: calculatorform.ui  homepage.ui
SporzOBC-WAL/src/: homepage.cpp  main.cpp
SporzOBC-WAL/src/CalculatorForm/: Calculator.cpp  CalculatorForm.cpp
SporzOBC-WAL/src/CoreApp/: CoreApp.cpp  CoreApp.hpp
SporzOBC-WAL/src/MyModel/: MyModel.cpp
SporzOBC-WAL/src/MyTableWidget/: MyTableWidget.cpp
documentation/: Doxyfile
src/: main.cpp
(+56 files in other folders)
